--- a/vfhp_local_planner/CMakeLists.txt
+++ b/vfhp_local_planner/CMakeLists.txt
@@ -9,7 +9,7 @@ project(vfhp_local_planner)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
   geometry_msgs
-  message_generation
+  mecanumrob_common
   nav_msgs
   roscpp
   rospy
@@ -111,7 +111,7 @@ catkin_python_setup()
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES vfhp_local_planner
-  CATKIN_DEPENDS geometry_msgs message_generation nav_msgs roscpp rospy std_msgs sensor_msgs tf2 tf2_ros
+  CATKIN_DEPENDS mecanumrob_common geometry_msgs nav_msgs roscpp rospy std_msgs sensor_msgs tf2 tf2_ros
 #  DEPENDS system_lib
 )
 
