--- a/vfhp_local_planner/package.xml
+++ b/vfhp_local_planner/package.xml
@@ -55,6 +55,7 @@
   <depend>roscpp</depend>
   <depend>rospy</depend>
   <depend>std_msgs</depend>
+  <depend>std_srvs</depend>
   <depend>sensor_msgs</depend>
   <depend>tf2</depend>
   <depend>tf2_ros</depend>
