--- a/vfhp_local_planner/CMakeLists.txt
+++ b/vfhp_local_planner/CMakeLists.txt
@@ -8,14 +8,15 @@ project(vfhp_local_planner)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
-  geometry_msgs
-  mecanumrob_common
-  nav_msgs
   roscpp
   rospy
+  mecanumrob_common
+  geometry_msgs
+  nav_msgs
   std_msgs
   std_srvs
   sensor_msgs
+  message_generation
   tf2
   tf2_ros
 )
@@ -54,11 +55,10 @@ catkin_python_setup()
 ##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
 
 ## Generate messages in the 'msg' folder
-# add_message_files(
-#   FILES
-#   Message1.msg
-#   Message2.msg
-# )
+add_message_files(
+  FILES
+  Histogram.msg
+)
 
 ## Generate services in the 'srv' folder
 # add_service_files(
@@ -75,10 +75,10 @@ catkin_python_setup()
 # )
 
 ## Generate added messages and services with any dependencies listed here
-# generate_messages(
-#   DEPENDENCIES
-#   geometry_msgs#   nav_msgs#   std_msgs
-# )
+generate_messages(
+  DEPENDENCIES
+  std_msgs
+)
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
@@ -112,7 +112,7 @@ catkin_python_setup()
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES vfhp_local_planner
-  CATKIN_DEPENDS mecanumrob_common geometry_msgs nav_msgs roscpp rospy std_msgs sensor_msgs tf2 tf2_ros std_srvs
+  CATKIN_DEPENDS mecanumrob_common geometry_msgs nav_msgs roscpp rospy message_runtime std_msgs sensor_msgs tf2 tf2_ros std_srvs
 #  DEPENDS system_lib
 )
 
